--- a/inicio.html
+++ b/inicio.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cajero Online</title>
+    <link rel="stylesheet" href="./layout.css">
 </head>
 <body>
-    <p>Hola mundo</p>
+    <header class="Header">
+        <div class="bienvenida" >
+        <h1>¡Bienvenido a tu app BBVA online!</h1>
+        <p id="binvenidaUsuario"></p>
+        </div>
+    </header>
+    <div>
+
+    </div>
+    <script src="./app.js"></script>
 </body>
 </html>
