Termino del apartado visual en el primer layout, comienzo de lógica de programación

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                         
                         <div class="text">
                             <p id="mensaje"></p>
-                            <p><img src="./imagges/Copyright-logi-1.png" class="body-login-container-alert" alt="Imagen de logo de derechos de autor">Todos los derechos reservados</p>
+                            <div class="text-immage">
+                                <h3><img src="./imagges/Copyright-logi-1.png" class="body-login-container-alert" alt="Imagen de logo de derechos de autor"></h3>
+                                <p>Todos los derechos reservados</p>
+                            </div>
                         </div>
                     </div>
                 </div>
