--- a/inicio.html
+++ b/inicio.html
@@ -10,12 +10,12 @@
     <header class="Header">
         <div class="bienvenida" >
         <h1>¡Bienvenido a tu app BBVA online!</h1>
-        <p id="binvenidaUsuario"></p>
+        <p id="bienvenidaUsuario"></p>
         </div>
     </header>
-    <div>
+    <div class="">
 
     </div>
-    <script src="./app.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
