--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <div class="body-login-container-inputext">
                         <input type="email" placeholder="Escribe tu correo" id="username" name="username">
                         <input type="password" placeholder="Escribe tu contraseña" id="password" name="password">
-                        <button onclick="ingresar(event)">Ingresar</button>
+                        <button onclick="ingresar()">Ingresar</button>
                         
                         <div class="text">
                             <p id="mensaje"></p>
