terminando la sincronidad del loggin al usuario correspondiente

--- a/inicio.html
+++ b/inicio.html
@@ -10,12 +10,12 @@
     <header class="Header">
         <div class="bienvenida" >
         <h1>¡Bienvenido a tu app BBVA online!</h1>
-        <p id="bienvenidaUsuario"></p>
+        <p onclick="mostrarIdentidad();" id="bienvenidaUsuario"></p>
         </div>
     </header>
-    <div class="">
-
+    <div class="containers">
+        
     </div>
-    <script src="./main.js"></script>
+    <script src="./inicio.js"></script>
 </body>
 </html>
